--- a/Experiments/plot/figures/Exp2_seq_read_single_tstrue.tex
+++ b/Experiments/plot/figures/Exp2_seq_read_single_tstrue.tex
@@ -75,14 +75,18 @@
 
     \begin{axis}
         [
-        ymode=log,    
-        ymin=0,
+        ymin=0.3,
+        ymax = 40,
+        ymode=log,            
         y tick label style={/pgf/number format/1000 sep={}},   
         scaled y ticks=false,
         scaled x ticks=false,
         tick label style={/pgf/number format/fixed},
         enlarge x limits=0.03,
-        ylabel={Execution Time[s]},
+        ytick={0.3,1,2,5,10,20,40},
+        yticklabels={0,1,2,5,10,20,40},
+        enlarge y limits={0.1,upper},	
+        ylabel={Execution Time[min.]},
         xlabel={$\#$ Read Objects},
         xtick pos=left,
         ytick pos=left,
@@ -93,7 +97,7 @@
         xticklabel style = {font=\Large},
         xtick=data,
         xtick={2000000,4000000,6000000,8000000,10000000},
-        xticklabels={2M,4M,6M,8M,10M},
+        xticklabels={2M,4M,6M,8M,10M},        
         xlabel style = {font=\Large, yshift=-7pt},
         height=1\columnwidth,
         width=0.45\textwidth,
