--- a/Experiments/plot/figures/Exp2_seq_read_parallel_all.tex
+++ b/Experiments/plot/figures/Exp2_seq_read_parallel_all.tex
@@ -11,6 +11,7 @@
         \myaddplot{FlatBufCPP}{True}{o}{black};
         \myaddplot{ProtoBufCPP}{True}{triangle*}{black};
         \myaddplot{BoostCPP}{True}{square}{black};
+        \myaddplot{BoostBinaryCPP}{True}{diamond*}{black};
         \myaddplot{BsonCPP}{True}{square*}{black};
 
         \myaddplot{MessagePackRust}{True}{triangle}{blue};
@@ -85,7 +86,7 @@
         ytick={0.3, 0.5, 1, 1.5, 2.5,4},
         yticklabels={0, 0.5, 1, 1.5, 2.5,4},
         enlarge x limits=0.03,
-        ylabel={Execution Time[min.]},
+        ylabel={Execution Time[min]},
         xlabel={$\#$ Read Objects},
         xtick pos=left,
         ytick pos=left,
@@ -98,7 +99,7 @@
         xtick={2000000,4000000,6000000,8000000,10000000},
         xticklabels={2M,4M,6M,8M,10M},
         xlabel style = {font=\Large, yshift=-7pt},
-        height=1\columnwidth,
+        height=1.1\columnwidth,
         width=0.45\textwidth,
         grid=both,
         grid style=dotted,
