--- a/Experiments/plot/figures/Exp2_seq_read_single_tsfalse.tex
+++ b/Experiments/plot/figures/Exp2_seq_read_single_tsfalse.tex
@@ -11,6 +11,7 @@
         \myaddplot{FlatBufCPP}{True}{o}{black};
         \myaddplot{ProtoBufCPP}{True}{triangle*}{black};
         \myaddplot{BoostCPP}{True}{square}{black};
+        \myaddplot{BoostBinaryCPP}{True}{diamond*}{black};
         \myaddplot{BsonCPP}{True}{square*}{black};
 
         \myaddplot{MessagePackRust}{True}{triangle}{blue};
@@ -86,7 +87,7 @@
             ytick={0.3,1,2,5,10,20,40},
             yticklabels={0,1,2,5,10,20,40},
             enlarge y limits={0.1,upper},	
-            ylabel={Execution Time[min.]},
+            ylabel={Execution Time[min]},
             xlabel={$\#$ Read Objects},
             xtick pos=left,
             ytick pos=left,
@@ -99,7 +100,7 @@
             xtick={2000000,4000000,6000000,8000000,10000000},
             xticklabels={2M,4M,6M,8M,10M},        
             xlabel style = {font=\Large, yshift=-7pt},
-            height=1\columnwidth,
+            height=1.1\columnwidth,
             width=0.45\textwidth,
             grid=both,
             grid style=dotted,
