--- a/Experiments/plot/figures/Exp2_seq_read_parallel.tex
+++ b/Experiments/plot/figures/Exp2_seq_read_parallel.tex
@@ -3,16 +3,16 @@
 	\makeatletter
 	\pgfplots@stacked@isfirstplottrue
 	\makeatother
-	\addplot [forget plot,draw=none] coordinates{({HandcodedCPP},0.01) ({inPlaceCPP},0.01) ({FlatBufCPP},0.01) ({ProtoBufCPP},0.01) 
-	({BoostCPP},0.01) ({BsonCPP},0.01) ({MessagePackRust},0.01) ({BincodeRust},0.01) ({JsonRust},0.01) ({FlexBufRust},0.01) ({BsonRust},0.01) ({Json+GzipJava},0.01) 
-	({JsonJava},0.01) ({BsonJava},0.01) ({DefaultJava},0.01) ({ProtoBufJava},0.01) ({ByteBufferJava},0.01) ({FlatBufJava},0.01) ({KryoJava},0.01)};
+	\addplot [forget plot,draw=none] coordinates{({HandcodedCPP},0.1) ({inPlaceCPP},0.1) ({ProtoBufCPP},0.1) ({FlatBufCPP},0.1)  ({BoostBinaryCPP},0.1) ({BoostCPP},0.1)  ({BsonCPP},0.1) 
+	({MessagePackRust},0.1) ({BincodeRust},0.1)  ({JsonRust},0.1) ({FlexBufRust},0.1) ({BsonRust},0.1) 
+	({ByteBufferJava},0.1) ({KryoJava},0.1) ({ProtoBufJava},0.1) ({FlatBufJava},0.1) ({DefaultJava},0.1) ({BsonJava},0.1)  ({JsonJava},0.1) ({Json+GzipJava},0.1)};
 }
 \makeatother
 
 \begin{tikzpicture}
 	\newcommand{\myaddplot}[7]{
 	   \addplot[white,xshift=#1,draw=#4,line width=0.15pt, fill=#2, discard if single={#3}{#7}, postaction={pattern=#5,pattern color=#4}] 
-	   table[ y=time, col sep=comma, x=baseline] {results/Exp2_read_parallel.dat};
+	   table[ y=time, col sep=comma, x=baseline] {results/Exp2_read_parallel_10m.dat};
 	   \label{#3#7}
    };  
 
@@ -22,13 +22,13 @@
 	   every node near coord/.append style={		  
 		   check for zeronan/.code={
 			   \pgfkeys{/pgf/fpu=true}
-			   \showvalue{\xbaseline}{BsonRust}{inPlaceCPP}{FlatBufCPP}{FlexBufRust}{KryoJava}{JsonRust}{ProtoBufJava}{}{FlatBufJava};
+			   \showvalue{\xbaseline}{}{inPlaceCPP}{FlatBufCPP}{FlexBufRust}{KryoJava}{JsonRust}{ProtoBufJava}{FlatBufJava}{};
 			   \pgfkeys{/pgf/fpu=false}
 		   },
 		   check for zeronan,
 	   }  
 	   ] 
-	   table[ y=time, col sep=comma, x=baseline] {results/Exp2_read_parallel.dat};	  
+	   table[ y=time, col sep=comma, x=baseline] {results/Exp2_read_parallel_10m.dat};	  
 	   \label{#3#7}
    };  
    
@@ -43,7 +43,7 @@
 			anchor=west
 		}
 	] 
-	table[ y=time, col sep=comma, x=baseline] {results/Exp2_read_parallel.dat};	
+	table[ y=time, col sep=comma, x=baseline] {results/Exp2_read_parallel_10m.dat};	
    };   
    
    \newcommand{\addDiagramExpOne}[7]{	
@@ -151,12 +151,12 @@
 		axis line style={gray},
 		ybar stacked,        
 		ymode=log,
-		ymin=0.575,
+		ymin=0.65,
 		x tick label style={/pgf/number format/1000 sep=},
 		ymax=10,		
 		scaled y ticks=false,		  
 		enlarge y limits={0.05,upper},		
-		ylabel={Execution Time[s]},		   
+		ylabel={Execution Time[min]},		   
 		ytick align=inside,
 		xtick align=outside,			
 		xtick pos=left,
@@ -167,8 +167,8 @@
 		x label style={yshift=-20pt},
 		xtick=data,
 		height=0.55\columnwidth,  
-		symbolic x coords={ HandcodedCPP, inPlaceCPP, FlatBufCPP, ProtoBufCPP, BoostCPP, BsonCPP, MessagePackRust, BincodeRust, JsonRust, FlexBufRust, BsonRust, Json+GzipJava, JsonJava, BsonJava, DefaultJava, ProtoBufJava, ByteBufferJava, FlatBufJava, KryoJava},		   
-		xticklabels={Handcoded, inPlace, FlatBuf, ProtoBuf, Boost, Bson, MessagePack, Bincode, Json, FlexBuf, Bson, Json+Gzip, Json, Bson, Default, ProtoBuf, ByteBuffer, FlatBuf, Kryo},  		   
+		symbolic x coords={ HandcodedCPP, inPlaceCPP, ProtoBufCPP, FlatBufCPP, BoostBinaryCPP, BoostCPP, BsonCPP, MessagePackRust,BincodeRust, JsonRust, FlexBufRust, BsonRust,ByteBufferJava,KryoJava,ProtoBufJava,FlatBufJava,DefaultJava,BsonJava,JsonJava, Json+GzipJava},		   
+		xticklabels={HandCoded, InPlace, ProtoBuf, FlatBuf, BoostBinary, BoostText, Bson, MessagePack,Bincode, Json, FlexBuf, Bson,ByteBuffer,Kryo,ProtoBuf,FlatBuf,Default,Bson,Json, Json+Gzip},  
 		point meta=rawy,            
 		nodes near coords={%
     		\pgfmathprintnumberto[fixed,assume math mode=true,precision=1]{\pgfplotspointmeta}{\myval}%
@@ -178,8 +178,8 @@
 		legend image code/.code={\draw [#1] (0cm,-0.1cm) rectangle (0.20cm,0.20cm); },
 		xticklabel style={name=T\ticknum}			
 ]
-\addDiagramExpOne{CPP}{black}{white}{0.23\textwidth}{{10,100,1000}}{{10,100,1000}}{{enlarge x limits=0.15,}};	
-\node [draw=none,inner sep=3, fill=lightgray!50, text width=0.134\textwidth,align=center,font=\scriptsize, anchor=west](leg1) at (rel axis cs: 0.00,0.955) {C++};
+\addDiagramExpOne{CPP}{black}{white}{0.26\textwidth}{{1,2,3,5,10}}{{1,2,3,5,10}}{{enlarge x limits=0.15,}};	
+\node [draw=none,inner sep=3, fill=lightgray!50, text width=0.17\textwidth,align=center,font=\scriptsize, anchor=west](leg1) at (rel axis cs: 0.00,0.955) {C++};
 
 \addDiagramExpOne{Rust}{black}{color7}{0.21\textwidth}{}{}{{enlarge x limits=0.18,}};
 \node [draw=none,inner sep=3, fill=lightgray!50, text width=0.134\textwidth,align=center,font=\scriptsize, anchor=west](leg1) at (rel axis cs: 0.00,0.955) {Rust};
@@ -190,7 +190,7 @@
 
 \end{groupplot}
 
-\node [draw=none,inner sep=0, font=\scriptsize, anchor=west](leg1) at ($(group c2r1.north west) + (-0.0cm,0.3cm)$) {\shortstack[l]{
+\node [draw=lightgray,inner sep=0.5mm, font=\scriptsize, anchor=west](leg1) at ($(group c2r1.north west) + (-0.0cm,0.3cm)$) {\shortstack[l]{
 		\ref{CPUJava} CPU \ \ \  
 		\ref{IOJava} I/O
 }};
