--- a/Experiments/plot/figures/Exp2_rand_read_single.tex
+++ b/Experiments/plot/figures/Exp2_rand_read_single.tex
@@ -188,7 +188,7 @@
 		xticklabels={HandCoded, , ProtoBuf, , BoostBinary, , Bson, ,Bincode, , FlexBuf, ,ByteBuffer,,ProtoBuf,,Default,,Json, },  
 		%
 		extra x ticks={inPlaceCPP,FlatBufCPP,BoostCPP,MessagePackRust,JsonRust,BsonRust,KryoJava,FlatBufJava,BsonJava,Json+GzipJava},
-		extra x tick labels={InPlace,FlatBuf,Boost,MessagePack,Json,Bson,Kryo,FlatBuf,Bson,Json+Gzip},
+		extra x tick labels={InPlace,FlatBuf,BoostText,MessagePack,Json,Bson,Kryo,FlatBuf,Bson,Json+Gzip},
 		%
 		every extra x tick/.style={major tick length=15pt, xtick align=outside},
 		point meta=rawy,            
