--- a/Experiments/plot/figures/Exp2_seq_read_parallel.tex
+++ b/Experiments/plot/figures/Exp2_seq_read_parallel.tex
@@ -22,7 +22,7 @@
 	   every node near coord/.append style={		  
 		   check for zeronan/.code={
 			   \pgfkeys{/pgf/fpu=true}
-			   \showvalue{\xbaseline}{}{inPlaceCPP}{FlatBufCPP}{FlexBufRust}{KryoJava}{JsonRust}{ProtoBufJava}{FlatBufJava}{};
+			   \showvalue{\xbaseline}{}{inPlaceCPP}{}{}{KryoJava}{}{ProtoBufJava}{FlatBufJava}{};
 			   \pgfkeys{/pgf/fpu=false}
 		   },
 		   check for zeronan,
@@ -39,7 +39,7 @@
 		nodes near coords={\pgfmathprintnumber[precision=1]{\pgfplotspointmeta}},
 		every node near coord/.append style={
 			black,			
-			xshift=-20pt,
+			xshift=-30pt,
 			anchor=west
 		}
 	] 
@@ -151,46 +151,46 @@
 		axis line style={gray},
 		ybar stacked,        
 		ymode=log,
-		ymin=0.65,
+		ymin=0.7,
 		x tick label style={/pgf/number format/1000 sep=},
-		ymax=10,		
+		ymax=8,		
 		scaled y ticks=false,		  
-		enlarge y limits={0.05,upper},		
-		ylabel={Execution Time[min]},		   
+		enlarge y limits={0.08,upper},		
+		ylabel={Execution Time [min]},		   
 		ytick align=inside,
 		xtick align=outside,			
 		xtick pos=left,
 		ytick pos=left,
-		yticklabel style = {font=\scriptsize},
-		ylabel style = {font=\scriptsize, yshift=-12pt},
-		xticklabel style = {font=\scriptsize, rotate=50, anchor=east, xshift=1pt, yshift=-1pt},
+		yticklabel style = {font=\footnotesize},
+		ylabel style = {yshift=-12pt},
+		xticklabel style = {font=\footnotesize, rotate=50, anchor=east, xshift=1pt, yshift=-1pt},
 		x label style={yshift=-20pt},
 		xtick=data,
-		height=0.55\columnwidth,  
+		height=0.7\columnwidth,  
 		symbolic x coords={ HandcodedCPP, inPlaceCPP, ProtoBufCPP, FlatBufCPP, BoostBinaryCPP, BoostCPP, BsonCPP, MessagePackRust,BincodeRust, JsonRust, FlexBufRust, BsonRust,ByteBufferJava,KryoJava,ProtoBufJava,FlatBufJava,DefaultJava,BsonJava,JsonJava, Json+GzipJava},		   
-		xticklabels={HandCoded, InPlace, ProtoBuf, FlatBuf, BoostBinary, BoostText, Bson, MessagePack,Bincode, Json, FlexBuf, Bson,ByteBuffer,Kryo,ProtoBuf,FlatBuf,Default,Bson,Json, Json+Gzip},  
+		xticklabels={HandCoded, InPlace, ProtoBuf, FlatBuf, BoostBinary, BoostText, BSON, MessagePack,Bincode, JSON, FlexBuf, BSON,ByteBuffer,Kryo,ProtoBuf,FlatBuf,Default,BSON,JSON, JSON+Gzip},  
 		point meta=rawy,            
 		nodes near coords={%
     		\pgfmathprintnumberto[fixed,assume math mode=true,precision=1]{\pgfplotspointmeta}{\myval}%
     		\pgfmathparse{\myval<0.1?:\myval}\pgfmathresult%
 		},
 		nodes near coords custom={1}, 
-		legend image code/.code={\draw [#1] (0cm,-0.1cm) rectangle (0.20cm,0.20cm); },
+		legend image code/.code={\draw [#1] (-0.2cm,-0.1cm) rectangle (0.20cm,0.20cm); },
 		xticklabel style={name=T\ticknum}			
 ]
-\addDiagramExpOne{CPP}{black}{white}{0.26\textwidth}{{1,2,3,5,10}}{{1,2,3,5,10}}{{enlarge x limits=0.15,}};	
-\node [draw=none,inner sep=3, fill=lightgray!50, text width=0.17\textwidth,align=center,font=\scriptsize, anchor=west](leg1) at (rel axis cs: 0.00,0.955) {C++};
+\addDiagramExpOne{CPP}{black}{white}{0.26\textwidth}{{1,2,3,4,5,}}{{1,2,3,4,5,8}}{{enlarge x limits=0.15,}};	
+\node [draw=none,inner sep=3, fill=lightgray!50, text width=0.17\textwidth,align=center,font=\footnotesize, anchor=west](leg1) at (rel axis cs: 0.00,0.955) {C++};
 
-\addDiagramExpOne{Rust}{black}{color7}{0.21\textwidth}{}{}{{enlarge x limits=0.18,}};
-\node [draw=none,inner sep=3, fill=lightgray!50, text width=0.134\textwidth,align=center,font=\scriptsize, anchor=west](leg1) at (rel axis cs: 0.00,0.955) {Rust};
+\addDiagramExpOne{Rust}{black}{color7}{0.21\textwidth}{}{{1,2,3,4,5,8}}{{enlarge x limits=0.18,}};
+\node [draw=none,inner sep=3, fill=lightgray!50, text width=0.134\textwidth,align=center,font=\footnotesize, anchor=west](leg1) at (rel axis cs: 0.00,0.955) {Rust};
 
-\addDiagramExpOne{Java}{black}{color7}{0.29\textwidth}{}{}{{enlarge x limits=0.14,}};
-\node [draw=none,inner sep=3, fill=lightgray!50, text width=0.2\textwidth,align=center,font=\scriptsize, anchor=west](leg1) at (rel axis cs: 0.00,0.955) {Java};
+\addDiagramExpOne{Java}{black}{color7}{0.29\textwidth}{}{{1,2,3,4,5,8}}{{enlarge x limits=0.14,}};
+\node [draw=none,inner sep=3, fill=lightgray!50, text width=0.2\textwidth,align=center,font=\footnotesize, anchor=west](leg1) at (rel axis cs: 0.00,0.955) {Java};
 
 
 \end{groupplot}
 
-\node [draw=lightgray,inner sep=0.5mm, font=\scriptsize, anchor=west](leg1) at ($(group c2r1.north west) + (-0.0cm,0.3cm)$) {\shortstack[l]{
+\node [draw=gray,inner sep=0.5mm, font=\footnotesize, anchor=west](leg1) at ($(group c2r1.north west) + (-0.0cm,0.3cm)$) {\shortstack[l]{
 		\ref{CPUJava} CPU \ \ \  
 		\ref{IOJava} I/O
 }};
