--- a/Experiments/plotting/figures/Exp2_seq_read_parallel.tex
+++ b/Experiments/plotting/figures/Exp2_seq_read_parallel.tex
@@ -54,8 +54,8 @@
 		#7
 		]
 		\resetstackedplots	
-		\myaddplot{0}{#2}{IO}{#2}{none}{I/O Time(taskset True)}{#1};
-		\myaddplotnan{0}{#2!25}{CPU}{#2!25}{north east lines}{CPU Time(taskset True)}{#1}{#2};
+		\myaddplot{0}{#2}{IO}{black}{none}{I/O Time(Taskset=True)}{#1};
+		\myaddplotnan{0}{#3}{CPU}{black}{north east lines}{CPU Time(Taskset=True)}{#1}{#2};
 	    \myaddplots{0}{white}{Total}{none}{#1};
    };     
 
@@ -166,7 +166,8 @@
 		xticklabel style = {font=\footnotesize, rotate=50, anchor=east, xshift=1pt, yshift=-1pt},
 		x label style={yshift=-20pt},
 		xtick=data,
-		height=0.7\columnwidth,  
+		height=0.4\columnwidth,
+		width=\textwidth,   
 		symbolic x coords={ HandcodedCPP, inPlaceCPP, ProtoBufCPP, FlatBufCPP, BoostBinaryCPP, BoostCPP, BsonCPP, MessagePackRust,BincodeRust, JsonRust, FlexBufRust, BsonRust,ByteBufferJava,KryoJava,ProtoBufJava,FlatBufJava,DefaultJava,BsonJava,JsonJava, Json+GzipJava},		   
 		xticklabels={HandCoded, InPlace, ProtoBuf, FlatBuf, BoostBinary, BoostText, BSON, MessagePack,Bincode, JSON, FlexBuf, BSON,ByteBuffer,Kryo,ProtoBuf,FlatBuf,Default,BSON,JSON, JSON+Gzip},  
 		point meta=rawy,            
@@ -178,13 +179,13 @@
 		legend image code/.code={\draw [#1] (-0.2cm,-0.1cm) rectangle (0.20cm,0.20cm); },
 		xticklabel style={name=T\ticknum}			
 ]
-\addDiagramExpOne{CPP}{black}{white}{0.26\textwidth}{{1,2,3,4,5,}}{{1,2,3,4,5,8}}{{enlarge x limits=0.15,}};	
+\addDiagramExpOne{CPP}{colora}{colorb}{0.27\textwidth}{{1,2,3,4,5,}}{{1,2,3,4,5,8}}{{enlarge x limits=0.15,}};	
 \node [draw=none,inner sep=3, fill=lightgray!50, text width=0.17\textwidth,align=center,font=\footnotesize, anchor=west](leg1) at (rel axis cs: 0.00,0.955) {C++};
 
-\addDiagramExpOne{Rust}{black}{color7}{0.21\textwidth}{}{{1,2,3,4,5,8}}{{enlarge x limits=0.18,}};
+\addDiagramExpOne{Rust}{colora}{colorb}{0.22\textwidth}{}{{1,2,3,4,5,8}}{{enlarge x limits=0.18,}};
 \node [draw=none,inner sep=3, fill=lightgray!50, text width=0.134\textwidth,align=center,font=\footnotesize, anchor=west](leg1) at (rel axis cs: 0.00,0.955) {Rust};
 
-\addDiagramExpOne{Java}{black}{color7}{0.29\textwidth}{}{{1,2,3,4,5,8}}{{enlarge x limits=0.14,}};
+\addDiagramExpOne{Java}{colora}{colorb}{0.30\textwidth}{}{{1,2,3,4,5,8}}{{enlarge x limits=0.14,}};
 \node [draw=none,inner sep=3, fill=lightgray!50, text width=0.2\textwidth,align=center,font=\footnotesize, anchor=west](leg1) at (rel axis cs: 0.00,0.955) {Java};
 
 
