--- a/Experiments/plotting/figures/Exp2_seq_read_single_tsfalse.tex
+++ b/Experiments/plotting/figures/Exp2_seq_read_single_tsfalse.tex
@@ -87,7 +87,7 @@
             ytick={0.3,1,2,5,10,20,40},
             yticklabels={0,1,2,5,10,20,40},
             enlarge y limits={0.05,upper},	
-            ylabel={Execution Time [min]},
+            ylabel={Execution Time [min.]},
             xlabel={$\#$ Read Objects},
             xtick pos=left,
             ytick pos=left,
@@ -100,8 +100,8 @@
             xtick={2000000,4000000,6000000,8000000,10000000},
             xticklabels={2M,4M,6M,8M,10M},        
             xlabel style = {font=\LARGE, yshift=-7pt},
-            height=1.3\columnwidth,
-            width=0.45\textwidth,
+            height=0.7\columnwidth,
+            width=0.5\columnwidth,
             grid=both,
             grid style=dotted,
             minor grid style={gray!50},
