--- a/Experiments/plotting/figures/Exp2_seq_read_parallel_all.tex
+++ b/Experiments/plotting/figures/Exp2_seq_read_parallel_all.tex
@@ -93,13 +93,13 @@
         ytick pos=left,
         ytick align=outside,
         xtick align=outside,
-        yticklabel style = {font=\LARGE},
-        ylabel style = {font=\LARGE},
-        xticklabel style = {font=\LARGE},
+        yticklabel style = {font=\large},
+        ylabel style = {font=\large},
+        xticklabel style = {font=\large},
         xtick=data,
         xtick={2000000,4000000,6000000,8000000,10000000},
         xticklabels={2M,4M,6M,8M,10M},
-        xlabel style = {font=\LARGE, yshift=-7pt},
+        xlabel style = {font=\large, yshift=-7pt},
         height=0.7\columnwidth,
         width=0.5\columnwidth,
         grid=both,
